--- a/index.html
+++ b/index.html
@@ -597,8 +597,10 @@ Now that you can navigate to the List page, let&#39;s dive in and customize its 
 			<div class="chapter">
 				<h2 id="displaying-data">Displaying Data</h2>
 <p>Now that you know how to navigate between different views, you can work on making the list component more complex by displaying data. In this chapter you will learn about two new NativeScript elements:</p>
-<p><em><code>ListView</code>
-</em><code>TabView</code></p>
+<ul>
+<li><code>ListView</code></li>
+<li><code>TabView</code></li>
+</ul>
 <h3 id="creating-a-list">Creating a list</h3>
 <p>Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
 <h3 id="binding-to-data-from-a-service">Binding to data from a service</h3>
