--- a/index.html
+++ b/index.html
@@ -361,10 +361,50 @@ export class AppRoutingModule { }
 			<div class="chapter">
 				<h2 id="displaying-data">Displaying Data</h2>
 <p>Now that you know how to navigate between different views, you can work on making the list component more complex by displaying data. In this chapter you will learn about two new NativeScript elements:</p>
-<p><em><code>ListView</code>
-</em><code>TabView</code></p>
-<h3 id="creating-a-list">Creating a list</h3>
-<p>Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
+<ul>
+<li><code>ListView</code></li>
+<li><code>TabView</code></li>
+</ul>
+<h3 id="creating-a-list-view">Creating a list view</h3>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Creating a list view
+</h4>
+
+<p>As you already know, the NativeScript playground provides numerous components you can drag and drop into your project. Go ahead and find the <code>ListView</code> component in the list of components and drag it inside the stack layout.</p>
+<p><img src="images/chapter4/chapter4-1.png" class="img-medium" /></p>
+<p>And you&#39;re done! you created a list view! Just kidding, but the playground does make it easy to get started learning NativeScript components. Go ahead and save your project and take a look at your app in preview.</p>
+<p><img src="images/chapter4/chapter4-2.jpeg" class="img-small" /></p>
+<p>You may have noticed that there is data showing up. That&#39;s because when you drag a component in the playground it scaffolds out a lot of code for you. Take a look at <code>list.component.ts</code> and you will see the code that is generating the data in the <code>ListView</code> that you drag-and-dropped.</p>
+<p><img src="images/chapter4/chapter4-3.png" class="img-medium" /></p>
+<p>Before we replace this code, let&#39;s just back over the the view code and update it a bit. Replace the current <code>ScrollView</code> and <code>StackLayout</code> with a single <code>StackLayout</code> containing a <code>Label</code> and <code>ListView</code>.</p>
+<pre><code class="lang-xml">&lt;StackLayout class=&quot;page&quot;&gt;
+    &lt;Label class=&quot;h2 text-center&quot; text=&quot;Upcoming Launches&quot;&gt;&lt;/Label&gt;
+    &lt;ListView [items]=&quot;launches&quot; class=&quot;list-group&quot;&gt;
+        &lt;ng-template let-item=&quot;item&quot;&gt;
+            &lt;GridLayout rows=&quot;*, *, *&quot; columns=&quot;auto, *&quot; [nsRouterLink]=&quot;[&#39;/detail&#39;, item.flight_number]&quot; class=&quot;list-group-item&quot;&gt;
+                &lt;Image row=&quot;0&quot; col=&quot;0&quot; rowSpan=&quot;3&quot; [src]=&quot;item.links.mission_patch&quot; class=&quot;img-circle&quot;&gt;&lt;/Image&gt;
+                &lt;Label row=&quot;0&quot; col=&quot;1&quot; [text]=&quot;item.rocket.rocket_name&quot;&gt;&lt;/Label&gt;
+                &lt;Label row=&quot;1&quot; col=&quot;1&quot; [text]=&quot;item.launch_date_utc&quot;&gt;&lt;/Label&gt;
+                &lt;Label row=&quot;2&quot; col=&quot;1&quot; textWrap=&quot;true&quot; [text]=&quot;item.launch_site.site_name_long&quot;&gt;&lt;/Label&gt;
+            &lt;/GridLayout&gt;
+        &lt;/ng-template&gt;
+    &lt;/ListView&gt;
+&lt;/StackLayout&gt;
+</code></pre>
+<p>Let&#39;s talk about the <code>ListView</code> in more depth. We&#39;re using the Angular syntax to bind the items in the <code>ListView</code> to a collection of elements called <code>launches</code>: </p>
+<p><code>&lt;ListView [items]=&quot;launches&quot; class=&quot;list-group&quot;&gt;</code></p>
+<p>When using the <code>ListView</code> component we typically define a template.</p>
+<pre><code class="lang-xml">&lt;ng-template let-item=&quot;item&quot;&gt;
+    &lt;GridLayout rows=&quot;*, *, *&quot; columns=&quot;auto, *&quot; class=&quot;list-group-item&quot;&gt;
+        &lt;Image row=&quot;0&quot; col=&quot;0&quot; rowSpan=&quot;3&quot; [src]=&quot;item.links.mission_patch&quot; class=&quot;img-circle&quot;&gt;&lt;/Image&gt;
+        &lt;Label row=&quot;0&quot; col=&quot;1&quot; [text]=&quot;item.rocket.rocket_name&quot;&gt;&lt;/Label&gt;
+        &lt;Label row=&quot;1&quot; col=&quot;1&quot; [text]=&quot;item.launch_date_utc&quot;&gt;&lt;/Label&gt;
+        &lt;Label row=&quot;2&quot; col=&quot;1&quot; textWrap=&quot;true&quot; [text]=&quot;item.launch_site.site_name_long&quot;&gt;&lt;/Label&gt;
+    &lt;/GridLayout&gt;
+&lt;/ng-template&gt;
+</code></pre>
+<p><div class="exercise-end"></div>
+Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
 <h3 id="binding-to-data-from-a-service">Binding to data from a service</h3>
 <p>Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat suscipit neque non bibendum. Phasellus non fringilla enim. Aliquam tempor quam vel ligula porta convallis. In blandit dictum tempus. Nunc at pulvinar justo. Aliquam eu mi eros. Nunc sit amet tellus non lorem malesuada tempus. Vestibulum nunc magna, varius ut aliquam non, fermentum sodales metus. Aliquam sit amet pulvinar lacus. Sed fringilla placerat tempor. Pellentesque id elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec laoreet, ex eget vulputate tincidunt, enim nisi ullamcorper urna, at scelerisque tellus mi sit amet nisi. Duis ac risus ac odio efficitur dignissim vitae dapibus purus.</p>
 <h3 id="adding-tabs">Adding tabs</h3>
