--- a/index.html
+++ b/index.html
@@ -668,11 +668,12 @@ Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat su
     <b>Exercise</b>: Adding the Details page
 </h4>
 
-<p>In chapter 3 you added the list page to your app by creating a new component. Adding the details page is the same process. </p>
-<p>We&#39;re not going to walk you through this process step by step, so try it out for yourself. If you&#39;re new to Angular, that&#39;s ok. Don&#39;t feel like you need to have mastered what it takes to create a new page without help. We&#39;ll give you a few pointers: first, review what you did in chatper 3; second, use this checklist to make sure you didn&#39;t forget any steps.</p>
+<p>In chapter 3 you added the list page to your app by creating a new component. Adding the details page is the same process. In this exercise, you&#39;ll be creating the Details page.</p>
+<p>We&#39;re not going to walk you through this process step by step, so try it out for yourself. If you&#39;re new to Angular, that&#39;s ok. Don&#39;t feel like you need to have mastered what it takes to create a new page without help. We&#39;ll give you a few pointers: first, review what you did in <a href="#chapter3.0">chatper 3</a>; second, use this checklist to make sure you didn&#39;t forget any steps.</p>
 <blockquote>
 <p><strong>IMPORTANT</strong>: Before you get started, we&#39;ll be navigating to the details page in a different way than we did previously. So, you won&#39;t need to create a tap event handler in the UI markup or Detail component class. You will still need to register the <em>detail</em> route, so don&#39;t forget to create that.</p>
 </blockquote>
+<p><br/></p>
 <h4 id="checklist-for-creating-the-detail-component">Checklist for creating the Detail component</h4>
 <p>If you need an assist when creating the Detail component, use this checklist:</p>
 <ul>
@@ -684,35 +685,70 @@ Mauris tempor facilisis accumsan. Mauris vitae iaculis risus. Mauris volutpat su
 <p>When you&#39;re finished creating the Detail component, you should have:</p>
 <ul>
 <li>A folder named <em>details</em> in the <em>views</em> folder.</li>
-<li>A <em>details.component.ts</em>, <em>details.component.html</em>, and <em>details.component.css</em> file in the <em>details</em> folder (see contents of these folders below).</li>
-<li>An updated <em>app.module.ts</em> file that registers the Detail component (see updated file below).</li>
-<li>The Details component registered as a route in the <em>app-routing.module.ts</em> file (see updated file below).</li>
+<li>A <code>details.component.ts</code>, <code>details.component.html</code>, and <code>details.component.css</code> file in the <em>details</em> folder (see contents of these folders below).</li>
+<li>An updated <code>app.module.ts</code> file that registers the Detail component (see updated file below).</li>
+<li>The Details component registered as a route in the <code>app-routing.module.ts</code> file (see updated file below).</li>
 </ul>
-<p>If you&#39;re comfortable doing this on your own, feel free to proceed by creating a folder underneath views named &quot;list&quot;, then adding the List component. Your Playground should like this when you&#39;ve finished:</p>
-<p><img src="images/chapter3/list-1.png" class="img-small" /></p>
-<blockquote>
-<p><strong>Don&#39;t forget!</strong> After adding the List component folder and files, you need to register it in the <code>app.module.ts</code> file.</p>
-</blockquote>
-<p>If you can get this far on your own, skip to the end of this exercise. If not, it&#39;s ok. Let&#39;s review how to add a component.</p>
-<h4 id="adding-a-page-in-the-playground">Adding a page in the Playground</h4>
-<p>The first step to creating a new page (or component) is to create a folder for the page. As you&#39;ve learned earlier, Angular components should be placed inside a folder. </p>
-<p>Start by adding a folder named &quot;list&quot; to the &quot;views&quot; folder. Click the 3 dots next to the &quot;views&quot; folder:</p>
-<p><img src="images/chapter3/list-2.png" class="img-small" /></p>
-<p>Select &quot;Add folder&quot; and name the folder &quot;list&quot;:</p>
-<p><img src="images/chapter3/list-3.png" class="img-small" /></p>
-<p>Then, create the &quot;list&quot; component by clicking the 3 dots next to the &quot;list&quot; folder, selecting &quot;Add component&quot;:</p>
-<p><img src="images/chapter3/list-4.png" class="img-medium" /></p>
-<p>After adding the list component, you should see:</p>
-<p><img src="images/chapter3/list-5.png" class="img-small" /></p>
-<p>Finally, open the <code>app.module.ts</code> file and add the List component to the app module.</p>
-<pre><code class="lang-javascript">import { NgModule, NgModuleFactoryLoader, NO_ERRORS_SCHEMA } from &quot;@angular/core&quot;;
-import { NativeScriptModule } from &quot;nativescript-angular/nativescript.module&quot;;
+<p><br/></p>
+<h4 id="details-component-ts">details.component.ts</h4>
+<p><br/></p>
+<pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
 
-import { AppRoutingModule } from &quot;./app-routing.module&quot;;
+@Component({
+    selector: &quot;detail&quot;,
+    moduleId: module.id,
+    templateUrl: &quot;./detail.component.html&quot;,
+    styleUrls: [&#39;./detail.component.css&#39;]
+})
+export class DetailComponent implements OnInit {
+
+    constructor() {
+    }
+
+    ngOnInit(): void {
+    }
+}
+</code></pre>
+<p><br/></p>
+<h4 id="detail-component-html">detail.component.html</h4>
+<p><br/></p>
+<pre><code class="lang-xml">&lt;ActionBar title=&quot;Detail&quot; class=&quot;action-bar&quot;&gt;
+&lt;/ActionBar&gt;
+
+&lt;ScrollView class=&quot;page&quot;&gt;
+    &lt;StackLayout class=&quot;home-panel&quot;&gt;
+        &lt;!--Add your page content here--&gt;
+    &lt;/StackLayout&gt;
+&lt;/ScrollView&gt;
+</code></pre>
+<p><br/></p>
+<h4 id="detail-component-css">detail.component.css</h4>
+<p><br/></p>
+<pre><code class="lang-css">.home-panel{
+    vertical-align: center;
+    font-size: 20;
+    margin: 15;
+}
+</code></pre>
+<p><br/></p>
+<h4 id="app-module-ts">app.module.ts</h4>
+<p><br/></p>
+<pre><code class="lang-javascript">import { NgModule, NO_ERRORS_SCHEMA } from &quot;@angular/core&quot;;
+import { NativeScriptModule } from &quot;nativescript-angular/nativescript.module&quot;;
+import { AppRoutingModule } from &quot;./app.routing&quot;;
 import { AppComponent } from &quot;./app.component&quot;;
+import { HttpClientModule } from &quot;@angular/common/http&quot;;
 
 import { HomeComponent } from &quot;./views/home/home.component&quot;;
 import { ListComponent } from &quot;./views/list/list.component&quot;;
+import { DetailComponent } from &quot;./views/detail/detail.component&quot;;
+import { LaunchService } from &quot;./services/launchService&quot;;
+
+// Uncomment and add to NgModule imports if you need to use two-way binding
+// import { NativeScriptFormsModule } from &quot;nativescript-angular/forms&quot;;
+
+// Uncomment and add to NgModule imports  if you need to use the HTTP wrapper
+// import { NativeScriptHttpModule } from &quot;nativescript-angular/http&quot;;
 
 @NgModule({
     bootstrap: [
@@ -720,22 +756,55 @@ import { ListComponent } from &quot;./views/list/list.component&quot;;
     ],
     imports: [
         NativeScriptModule,
-        AppRoutingModule
+        AppRoutingModule,
+        HttpClientModule
     ],
     declarations: [
         AppComponent,
         HomeComponent,
-        ListComponent
+        ListComponent,
+        DetailComponent
+    ],
+    providers: [
+
     ],
     schemas: [
         NO_ERRORS_SCHEMA
     ]
 })
+/*
+Pass your application module to the bootstrapModule function located in main.ts to start your app
+*/
 export class AppModule { }
+</code></pre>
+<p><br/></p>
+<h4 id="app-routing-module-ts">app-routing.module.ts</h4>
+<p><br/></p>
+<pre><code class="lang-javascript">import { NgModule } from &quot;@angular/core&quot;;
+import { NativeScriptRouterModule } from &quot;nativescript-angular/router&quot;;
+import { Routes } from &quot;@angular/router&quot;;
+
+import { HomeComponent } from &quot;./views/home/home.component&quot;;
+import { ListComponent } from &quot;./views/list/list.component&quot;;
+import { DetailComponent } from &quot;./views/detail/detail.component&quot;;
+
+const routes: Routes = [
+    { path: &quot;&quot;, component: HomeComponent },
+    { path: &quot;home&quot;, component: HomeComponent },
+    { path: &quot;list&quot;, component: ListComponent },
+    { path: &quot;detail&quot;, component: DetailComponent },
+];
+
+@NgModule({
+    imports: [NativeScriptRouterModule.forRoot(routes)],
+    exports: [NativeScriptRouterModule]
+})
+export class AppRoutingModule { }
 </code></pre>
 <p>This concludes the exercise.</p>
 <div class="exercise-end"></div>
 
+<p>That&#39;s it! Now that you have the Details component created, we&#39;ll be learning how to navigate and pass data to it.</p>
 <h3 id="passing-data-to-the-details-page">Passing Data to the Details Page</h3>
 <h3 id="displaying-launch-details">Displaying Launch Details</h3>
 
