add intro to angular directives and passing data to components

--- a/index.html
+++ b/index.html
@@ -806,6 +806,15 @@ export class AppRoutingModule { }
 
 <p>That&#39;s it! Now that you have the Details component created, we&#39;ll be learning how to navigate and pass data to it.</p>
 <h3 id="passing-data-to-the-details-page">Passing Data to the Details Page</h3>
+<p>In chapter 3, you learned how to navigate between components by:</p>
+<ul>
+<li>Binding a tap event handler to a button.</li>
+<li>Passing the <code>/list</code> route to the <code>navigate()</code> function of the <code>RoutingExtensions</code> class.</li>
+</ul>
+<p>This is a great way to navigate between pages/components, but there&#39;s also a different way. In this section, you&#39;ll learn how to use an <em>Angular/NativeScript attribute directive</em> to navigate (and pass data) to the Details component. </p>
+<blockquote>
+<p><strong>What&#39;s an attribute directive?</strong>: In Angular, an attribute directive is a piece of code added to the UI markup that modifies the appearance (or behavior) of the UI element. It sounds really fancy (like most Angular terms do), but it&#39;s really just like HTML attributes that Angular knows how to decipher. If you&#39;re interested in learning more about Angular attribute directives, check out their <a href="https://angular.io/guide/attribute-directives">documentation</a>.</p>
+</blockquote>
 <h3 id="displaying-launch-details">Displaying Launch Details</h3>
 
 			</div>
