--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@ export class AppRoutingModule { }
     <b>Exercise</b>: Using an attribute directive to navigate between components
 </h4>
 
-<p>In this exercise, you&#39;ll learn aobut the <code>nsRouterLink</code> attribute directive, and see how it can make navigating between components easy.</p>
+<p>In this exercise, you&#39;ll learn about the <code>nsRouterLink</code> attribute directive, and see how it can make navigating between components easy.</p>
 <blockquote>
 <p><strong>nsRouterLink Attribute Directive</strong>: The <code>nsRouterLink</code> attribute directive is an attribute directive provided by NativeScript. It works like the Angular <a href="https://angular.io/guide/router#router-links">routerLink</a> attribute directive, and allows you to add navigation capabilities to UI elements without needing to write code to bind to the tap event handler.</p>
 </blockquote>
@@ -868,6 +868,63 @@ export class AppRoutingModule { }
 <div class="exercise-end"></div>
 
 <h3 id="displaying-launch-details">Displaying Launch Details</h3>
+<p>In the last section, you learned how to use the <code>nsRouterLink</code> attribute directive to navigate (and pass data) to the Detail component. Now, let&#39;s learn how to access the flight number that you passed into the <code>id</code> router variable.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Accessing navigation route data in a component
+</h4>
+
+<p>In this exercise, you&#39;ll learn how to access navigate ruote data in the Detail component. </p>
+<p>Let&#39;s start by opening the <code>details.component.ts</code> file. We haven&#39;t changed the file since we created it, so you should have:</p>
+<pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
+
+@Component({
+    selector: &quot;detail&quot;,
+    moduleId: module.id,
+    templateUrl: &quot;./detail.component.html&quot;,
+    styleUrls: [&#39;./detail.component.css&#39;]
+})
+export class DetailComponent implements OnInit {
+
+    constructor() {
+    }
+
+    ngOnInit(): void {
+    }
+}
+</code></pre>
+<p>Update the Details component with some new code. It&#39;s ok if you don&#39;t understand it right now, we&#39;ll exaplin.</p>
+<pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
+import { ActivatedRoute } from &quot;@angular/router&quot;;
+
+@Component({
+    selector: &quot;detail&quot;,
+    moduleId: module.id,
+    templateUrl: &quot;./detail.component.html&quot;,
+    styleUrls: [&#39;./detail.component.css&#39;]
+})
+export class DetailComponent implements OnInit {
+
+    constructor(
+        private route: ActivatedRoute) { }
+
+    ngOnInit(): void {
+        const flightNumber = +this.route.snapshot.params[&quot;id&quot;];
+    }
+}
+</code></pre>
+<p>You just added 3 things to the Details component:</p>
+<ul>
+<li>Imported the <code>ActivatedRoute</code> class, which is an Angular class used to access route information (like the <code>id</code> variable you passed in).</li>
+<li>Injected an instance of the <code>ActivatedRoute</code> class via the constructor (you&#39;ll recall you did that previously in the workshop).</li>
+<li>Retrieved the value of the <code>id</code> variable and stored it in the <code>flightNumber</code> variable.</li>
+</ul>
+<p>Most of the code you added should be familiar (the structure, but perhaps not the actual classes). We&#39;re not going to dive deep into the <code>ActivatedRoute</code> class, but we think it&#39;s a good opportunity to explain <code>const flightNumber = +this.route.snapshot.params[&quot;id&quot;];</code>.</p>
+<p>Let&#39;s start with <code>this.route.snapshot.params[&quot;id&quot;]</code> - this retrieves the value passed into the <code>id</code> route variable. As you&#39;ll recall, this is the flight number we passed in via the <code>nsRouterLink</code> attribute directive. </p>
+<p>Next, what&#39;s with that <code>+</code> in front of <code>this.route.snapshot.params[&quot;id&quot;]</code>? You may not have seen this before, and it&#39;s something we often forget. The <code>+</code> is a JavaScript feature that converts the value of <code>this.route.snapshot.params[&quot;id&quot;]</code> to a number. It&#39;s needed because data passed via Angular routes are strings.</p>
+<p>This concludes the exercise. In the next exercise, you&#39;ll reuse the Launch service previosuly created to retrieve the details about a specific launch.</p>
+<div class="exercise-end"></div>
+
+<p>Cool. You just passed data between pages/componets and retrieved the data. Let&#39;s keep going by getting the details of a launch.</p>
 
 			</div>
 		</div>
