--- a/index.html
+++ b/index.html
@@ -874,6 +874,7 @@ export class AppRoutingModule { }
 </h4>
 
 <p>In this exercise, you&#39;ll learn how to access navigate ruote data in the Detail component. </p>
+<h4 id="retrieving-data-from-a-route-variable">Retrieving data from a route variable</h4>
 <p>Let&#39;s start by opening the <code>details.component.ts</code> file. We haven&#39;t changed the file since we created it, so you should have:</p>
 <pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
 
@@ -921,10 +922,101 @@ export class DetailComponent implements OnInit {
 <p>Most of the code you added should be familiar (the structure, but perhaps not the actual classes). We&#39;re not going to dive deep into the <code>ActivatedRoute</code> class, but we think it&#39;s a good opportunity to explain <code>const flightNumber = +this.route.snapshot.params[&quot;id&quot;];</code>.</p>
 <p>Let&#39;s start with <code>this.route.snapshot.params[&quot;id&quot;]</code> - this retrieves the value passed into the <code>id</code> route variable. As you&#39;ll recall, this is the flight number we passed in via the <code>nsRouterLink</code> attribute directive. </p>
 <p>Next, what&#39;s with that <code>+</code> in front of <code>this.route.snapshot.params[&quot;id&quot;]</code>? You may not have seen this before, and it&#39;s something we often forget. The <code>+</code> is a JavaScript feature that converts the value of <code>this.route.snapshot.params[&quot;id&quot;]</code> to a number. It&#39;s needed because data passed via Angular routes are strings.</p>
+<blockquote>
+<p><strong>OnInit vs Component Constructor</strong>: You may be wondering why you didn&#39;t retrieve the route variable in the constructor. This is an Angular style guideline. Per Angular guidelines, component constructors should only be used to initiatize class references. No processing, business logic, or any action that could take time should go into the constructor. Instead, Angular recommends placing these types of activities (like route parameter retrieval) be done in the <code>OnInit()</code> function. There are other details about why <code>OnInit()</code> shoudl be used, but we&#39;re not going to cover them. For more details, see a good write-up by <a href="https://toddmotto.com/angular-constructor-ngoninit-lifecycle-hook">Todd Motto</a>.</p>
+</blockquote>
 <p>This concludes the exercise. In the next exercise, you&#39;ll reuse the Launch service previosuly created to retrieve the details about a specific launch.</p>
 <div class="exercise-end"></div>
 
 <p>Cool. You just passed data between pages/componets and retrieved the data. Let&#39;s keep going by getting the details of a launch.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Retrieving launch details
+</h4>
+
+<p>In this exercise, you&#39;ll retrieve launch details from the launch service.</p>
+<h4 id="updating-the-launch-service">Updating the launch service</h4>
+<p>Let&#39;s start by adding a function to the Launch service to retrieve data about a specific launch. </p>
+<p>Open the <code>launchService.ts</code> file.</p>
+<p>Add a function named <code>getLaunch()</code> to the <code>LaunchService</code> class:</p>
+<pre><code class="lang-javascript">public getLaunch(flight_number: number): Launch {
+    let results = this.launches
+        .filter((l: Launch) =&gt; l.flight_number == flight_number);
+    if (results.length &gt; 0) return results[0];
+    return null;
+}
+</code></pre>
+<p>We&#39;re not going to explain the details of this class, but it retrieves a specific launch by passing in the launch number. How convenient ;-).</p>
+<h4 id="injecting-the-launch-service-into-the-detail-component">Injecting the Launch service into the Detail component</h4>
+<p>Now, head back to the Details component, and inject the Launch service:</p>
+<pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
+import { ActivatedRoute } from &quot;@angular/router&quot;;
+
+import { LaunchService } from &quot;../../services/launchService&quot;;
+
+@Component({
+    selector: &quot;detail&quot;,
+    moduleId: module.id,
+    templateUrl: &quot;./detail.component.html&quot;,
+    styleUrls: [&#39;./detail.component.css&#39;],
+    providers: [LaunchService]
+})
+export class DetailComponent implements OnInit {
+
+    constructor(
+        private route: ActivatedRoute,
+        private launchService: LaunchService) { }
+
+    ngOnInit(): void {
+        const flightNumber = +this.route.snapshot.params[&quot;id&quot;];
+    }
+
+}
+</code></pre>
+<p>As you can see, you added a few things:</p>
+<ul>
+<li>Imported the <code>LaunchService</code> class.</li>
+<li>Added the <code>LaunchService</code> class as a provider.</li>
+<li>Injected an instance of the <code>LaunchService</code> class by adding it to the constructor.</li>
+</ul>
+<p>You&#39;ve done this before, so it should look familiar. </p>
+<h4 id="retrieving-a-launch">Retrieving a launch</h4>
+<p>Next, update the Details component to get a launch from the Launch service:</p>
+<pre><code class="lang-javascript">import { Component, OnInit } from &quot;@angular/core&quot;;
+import { ActivatedRoute } from &quot;@angular/router&quot;;
+
+import { Launch } from &quot;../../models/launch&quot;;
+import { LaunchService } from &quot;../../services/launchService&quot;;
+
+@Component({
+    selector: &quot;detail&quot;,
+    moduleId: module.id,
+    templateUrl: &quot;./detail.component.html&quot;,
+    styleUrls: [&#39;./detail.component.css&#39;],
+    providers: [LaunchService]
+})
+export class DetailComponent implements OnInit {
+    launch: Launch;
+
+    constructor(
+        private route: ActivatedRoute,
+        private launchService: LaunchService) { }
+
+    ngOnInit(): void {
+        const flightNumber = +this.route.snapshot.params[&quot;id&quot;];
+        this.launch = this.launchService.getLaunch(flightNumber);
+    }
+}
+</code></pre>
+<p>You&#39;ll notice that you added a public <code>launch</code> variable to the Details component, then populated it in the <code>OnInit()</code> function by calling the <code>getLaunch()</code> you ceated previously. </p>
+<p>That&#39;s all!</p>
+<p>This concludes the exercise. In the next exercise, you&#39;l update the UI markup to display the launch details.</p>
+<div class="exercise-end"></div>
+
+
+
+
+
+
 
 			</div>
 		</div>
