initial formatting pass on ch 1

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 <p><img src="images/chapter1/scan-qr.jpg" class="img-small" /></p>
 <p>Using the QR code scanner in the NativeScript Playground app, scan the QR code displayed on the NativeScript Playground website. </p>
 <blockquote>
-<p><em>NOTE</em>: Do not scan the QR code on <em>this</em> page. Scan the QR code in the Playground.</p>
+<p><strong>NOTE</strong></p>
+<p>Do not scan the QR code on <em>this</em> page. Scan the QR code in the Playground.</p>
 </blockquote>
 <p>After scanning the QR code, the NativeScript Playground app will open the NativeScript Preview app and dynamically load the code from the Playground Website and launch a native mobile app on your mobile device!</p>
 <p>When all of this happens, you should see this on your mobile device:</p>
@@ -147,10 +148,12 @@
 <p>The bottom central area shows you which mobile devices are connected to the Playground and device/error logs for debugging purposes.</p>
 <p><img src="images/chapter1/play-6.png" class="img-large" /></p>
 <blockquote>
-<p><em>Connected Devices</em> Hold on...the Playground shows you connected devices. Yes, that&#39;s right. When your mobile device connects to the Playground, it registers itself with the website. You can see a variety of information about a connected device. </p>
+<p><strong>Connected Devices</strong> </p>
+<p>Hold on...the Playground shows you connected devices. Yes, that&#39;s right. When your mobile device connects to the Playground, it registers itself with the website. You can see a variety of information about a connected device. </p>
 </blockquote>
 <p>Pretty cool, right? Well, there&#39;s somethign even cooler about the Playground: <em>LiveSync</em>. </p>
 <blockquote>
+<p><strong>LiveSync</strong></p>
 <p>LiveSync is a technology that syncs changes made in the Playground down to your mobile device in real time. This means that you can quickly make changes to your app in the Playground and the changes will be instantly pushed to connected devices. If you&#39;ve ever done mobile development before, you&#39;ll understand how useful this is - getting feedback from your code running on real mobile devices usually takes time, but with LiveSync, it&#39;s instantaneous.</p>
 </blockquote>
 <h3 id="livesync-in-action">LiveSync in Action</h3>
