init. formatting pass of ch 2

--- a/index.html
+++ b/index.html
@@ -338,7 +338,10 @@ export class AppRoutingModule { }
 &lt;/ScrollView&gt;
 </code></pre>
 <p><img src="images/chapter2/chapter2-3.jpeg" class="img-small" /></p>
+<blockquote>
+<p><strong>What are those CSS class names?</strong></p>
 <p>You may have noticed that you added the <code>btn</code> and <code>btn-primary</code> classes to the <code>&lt;Button&gt;</code> that you created and that the button styled blue. The <code>btn</code> and <code>btn-primary</code> classes are part of the <a href="https://docs.nativescript.org/ui/theme#buttons">NativeScript Themes</a> that NativeScript provides to you out of the box to help style your app.</p>
+</blockquote>
 <p>You&#39;re almost done with the home view. To make the home view look more complete we should move the button we added to the bottom of view so that it looks more polished. To complete the view, update the <code>home-component.html</code> to set the vertical alignment property of the <code>&lt;StackLayout&gt;</code>.</p>
 <pre><code class="lang-xml">&lt;ScrollView class=&quot;base&quot;&gt;
     &lt;StackLayout verticalAlignment=&quot;bottom&quot;&gt;
